# hs-www

./: .gitignore  HTTPClient.hs  Main.hs  Poster.hs  WSClient.hs  WSServer.hs  hs-www.cabal  vursions.cabal
Adaptor/: PostgreSQL.hs  SCGI.hs  WebSocket.hs
Bindings/: Git.hs
Junction/: Git.hs
WWW/: SCGI.hs  WebSocket.hs
examples/: BenchSHA.hs  Hello.hs  HsPg.hs  OauthCallback.hs  Poster.hs  WSClient.hs  WSServer.hs  cgi_upload.hs  upload_client.hs  upload_mpf.py
