Name:                vursions
Version:             0.1
License:             PublicDomain
Maintainer:          r0ml@mac.com
Category:            Web
Synopsis:            A Haskell library for writing SCGI programs.
cabal-version:       >= 1.18
Build-type:          Simple

Library
  Build-Depends:     preface, base, hlibgit2, postgrehs
  Exposed-Modules:   Adaptor.SCGI, Junction.Git
  Ghc-options:       -Wall -threaded
  Hs-Source-Dirs:    .
  Default-Language:  Haskell2010

Executable vursions
  Build-Depends:     preface, base, hlibgit2, postgrehs
  Main-Is:           Main.hs
  Hs-Source-Dirs:    .
  Ghc-options:       -Wall -static -threaded
--  Ghc-prof-options:  -fprof-auto
  Default-Language:  Haskell2010
--  Extra-libraries:   Cffi

Executable hello
  Main-is:           Hello.hs
  Hs-Source-Dirs:    examples
  Ghc-options:       -Wall 
  Default-language:   Haskell2010
  Build-depends:     vursions, base, preface

Executable oauth_callback
  Main-is: OauthCallback.hs
  Hs-Source-Dirs: examples
  Ghc-options: -Wall
  Default-language: Haskell2010
  Build-depends: vursions, preface, base

Executable poster
  Main-is: Poster.hs
  Hs-Source-Dirs:  examples
  Ghc-options: -Wall
  Default-language:   Haskell2010
  Build-depends:     vursions, preface, base

-- Executable wsclnt
--   Main-is: WSClient.hs
--   Hs-Source-Dirs:  examples, .
--   Ghc-options: -Wall
--   Default-language:   Haskell2010
--   Build-depends:      base, preface, base, cryptohash, entropy, base64-bytestring

-- Executable wssrvr
--   Main-is: WSServer.hs
--   Hs-Source-Dirs:  examples, .
--   Ghc-options: -Wall
--   Default-language:   Haskell2010
--   Build-depends:      base, preface, cryptohash, entropy, base64-bytestring

-- Executable wwwclnt
--   Main-is: HTTPClient.hs
--   Hs-Source-Dirs:  examples, .
--   Ghc-options: -Wall
--   Default-language:   Haskell2010
--   Build-depends:      base, bytestring, network

Benchmark bench-sha
    type:       exitcode-stdio-1.0
    Hs-Source-Dirs: examples
    main-is:    BenchSHA.hs
    build-depends: preface, base, criterion, SHA, cryptohash
    Default-language:   Haskell2010
